--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-
 permalink: /:title
 
-title: 王志尧
-url: https://yairs0117.github.io/wangzhiyao
+title: BeiYuu.com
+url: http://beiyuu.com
+feed: /atom.xml
+author_info: <a href="http://beiyuu.com/">BeiYuu</a>
